# rayt

./: Cargo.toml  LICENSE  README.md
src/: camera.rs  color.rs  image.rs  main.rs  ray.rs  render.rs  scene.rs  vec3.rs
src/object/: light.rs  material.rs  mod.rs  plane.rs  sphere.rs
