[package]
name = "rayt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.3"
impl_ops = "0.1.1"
rand = "0.8.5"
indicatif = {version = "*", features = ["rayon"]}
hdrldr = "*"
structopt = "*"

[profile.release]
debug = true